--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Portfolio homepage - Web developer and designer showcasing projects and skills">
   <title>Home | Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-  <svg aria-hidden="true" focusable="false">
-    <use href="assets/img/icons.svg#github"></use>
-  </svg>
   <header>
     <nav class="nav">
       <a class="brand" href="index.html">
@@ -23,10 +21,10 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="nav__actions">
-        <a class="icon-btn" href="https://github.com/your-username" aria-label="GitHub">
+        <a class="icon-btn" href="https://github.com/your-username" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
@@ -46,20 +44,22 @@
       <div>
         <p class="eyebrow">Hello, I'm</p>
         <h1>Your Name</h1>
-        <p class="subtitle">Student • Builder • Curious mind learning web development.</p>
+        <p class="subtitle">Student • Builder • Curious mind learning web development</p>
+        <p style="color: var(--muted); margin-top: 8px; margin-bottom: 24px;">I create beautiful, functional websites and web applications. Passionate about clean code, great design, and continuous learning.</p>
         <div class="cta">
           <a class="btn btn-primary" href="projects.html">View Projects</a>
           <a class="btn btn-ghost" href="about.html">About me</a>
         </div>
-        <div style="margin-top:18px;">
+        <div style="margin-top:24px;">
           <span class="pill">HTML/CSS</span>
           <span class="pill">JavaScript</span>
-          <span class="pill">GenAI</span>
+          <span class="pill">Responsive Design</span>
+          <span class="pill">Git & GitHub</span>
         </div>
       </div>
       <div class="profile">
         <div class="profile__frame">
-          <img class="profile__img" src="assets/img/profile.svg" alt="Profile photo placeholder">
+          <img class="profile__img" src="assets/img/profile.svg" alt="Profile photo">
         </div>
       </div>
     </section>
@@ -75,24 +75,24 @@
             <h3>Project 1</h3>
             <span class="tag">HTML • CSS • JS</span>
           </div>
-          <p>A brief description of your first project. Highlight the main features and what you learned building it.</p>
+          <p>A brief description of your first project. Highlight the main features and what you learned building it. This could be a personal website, a web app, or a coding challenge you completed.</p>
           <div class="project-img" style="margin-top: 12px;">
             <img src="assets/img/project1.svg" alt="Project 1 screenshot">
           </div>
-          <div style="margin-top: 12px;">
+          <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
           </div>
         </div>
         <div class="card">
           <div class="card__header">
             <h3>Project 2</h3>
-            <span class="tag">Optional</span>
+            <span class="tag">Web Development</span>
           </div>
-          <p>Describe your second project here. This could be your Hour of Code project or another web development project.</p>
+          <p>Describe your second project here. This could be your Hour of Code project or another web development project. Share what technologies you used and what challenges you overcame.</p>
           <div class="project-img" style="margin-top: 12px;">
             <img src="assets/img/project2.svg" alt="Project 2 screenshot">
           </div>
-          <div style="margin-top: 12px;">
+          <div style="margin-top: 12px; display: flex; gap: 12px; align-items: center;">
             <a href="projects.html" class="repo-link">Learn more →</a>
           </div>
         </div>
@@ -101,13 +101,13 @@
 
     <section class="panel">
       <div class="card__header">
-        <h2>Quick facts</h2>
+        <h2>About Me</h2>
         <span class="tag">Based in • Your city</span>
       </div>
       <div class="grid grid-2">
         <div class="card">
           <h3>Who am I?</h3>
-          <p>I'm a student exploring software, design, and problem solving. I enjoy building small products and documenting what I learn.</p>
+          <p>I'm a student exploring software, design, and problem solving. I enjoy building small products and documenting what I learn. When I'm not coding, I'm learning new technologies and working on side projects.</p>
         </div>
         <div class="card">
           <h3>What I'm learning</h3>
@@ -115,6 +115,8 @@
             <li>Modern HTML, CSS, and responsive layouts</li>
             <li>JavaScript basics and DOM interactions</li>
             <li>Using Git + GitHub for version control</li>
+            <li>Web accessibility and best practices</li>
+            <li>UI/UX design principles</li>
           </ul>
         </div>
       </div>
@@ -123,7 +125,7 @@
     <section class="panel">
       <h2>Skills & Technologies</h2>
       <p>Tools and technologies I'm working with:</p>
-      <div style="margin-top: 16px; display: flex; flex-wrap: wrap; gap: 8px;">
+      <div style="margin-top: 20px; display: flex; flex-wrap: wrap; gap: 8px;">
         <span class="pill">HTML5</span>
         <span class="pill">CSS3</span>
         <span class="pill">JavaScript</span>
@@ -131,24 +133,26 @@
         <span class="pill">Git & GitHub</span>
         <span class="pill">VS Code</span>
         <span class="pill">Web Accessibility</span>
+        <span class="pill">Figma</span>
+        <span class="pill">Command Line</span>
       </div>
     </section>
 
     <section class="panel" id="contact">
-      <h2>Get in touch</h2>
-      <p>Use the form below or email me at <a href="mailto:you@example.com">you@example.com</a>.</p>
+      <h2>Get in Touch</h2>
+      <p>Have a project in mind or want to collaborate? I'd love to hear from you. Use the form below or email me directly at <a href="mailto:you@example.com" style="color: var(--accent);">you@example.com</a>.</p>
       <form id="contact-form">
         <label>
           Name
-          <input type="text" name="name" required>
+          <input type="text" name="name" placeholder="Your name" required>
         </label>
         <label>
           Email
-          <input type="email" name="email" required>
+          <input type="email" name="email" placeholder="your.email@example.com" required>
         </label>
         <label>
           Message
-          <textarea name="message" rows="4" required></textarea>
+          <textarea name="message" rows="5" placeholder="Tell me about your project or just say hello!" required></textarea>
         </label>
         <button class="btn btn-primary" type="submit">Send message</button>
         <p class="status" aria-live="polite"></p>
