--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <a href="#contact">Contact</a>
       </div>
       <div class="nav__actions">
-        <a class="icon-btn" href="https://github.com/your-username" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
+        <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
         <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
@@ -35,7 +35,7 @@
       <a href="about.html">About</a>
       <a href="projects.html">Projects</a>
       <a href="#contact">Contact</a>
-      <a class="repo-link" href="https://github.com/your-username/your-repo">GitHub Repo ↗</a>
+      <a class="repo-link" href="https://github.com/elshansamadzada7/elshansamadzada7.github.io">GitHub Repo ↗</a>
     </div>
   </header>
 
@@ -163,9 +163,9 @@
   <footer>
     <div class="footer">
       <span>© 2025 Your Name</span>
-      <a class="repo-link" href="https://github.com/your-username/your-repo">Website repository ↗</a>
+      <a class="repo-link" href="https://github.com/elshansamadzada7/elshansamadzada7.github.io">Website repository ↗</a>
       <div class="nav__actions">
-        <a class="icon-btn" href="https://github.com/your-username" aria-label="GitHub">
+        <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
         <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
