Add profile photo and 'Who I Am' section to homepage

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         <p class="eyebrow">Hello, I'm</p>
         <h1>Your Name</h1>
         <p class="subtitle">Student • Builder • Curious mind learning web development</p>
-        <p style="color: var(--muted); margin-top: 8px; margin-bottom: 24px;">I create beautiful, functional websites and web applications. Passionate about clean code, great design, and continuous learning.</p>
+        <div style="color: var(--muted); margin-top: 16px; margin-bottom: 24px; line-height: 1.8;">
+          <p style="margin-bottom: 12px;">I'm a passionate web developer and designer who loves creating beautiful, functional websites and web applications. With a focus on clean code, great design, and continuous learning, I enjoy turning ideas into reality through code.</p>
+          <p style="margin-bottom: 12px;">When I'm not coding, you'll find me exploring new technologies, working on side projects, or sharing what I learn with others. I believe in building things that matter and making the web a better place, one project at a time.</p>
+        </div>
         <div class="cta">
           <a class="btn btn-primary" href="projects.html">View Projects</a>
           <a class="btn btn-ghost" href="about.html">About me</a>
@@ -59,7 +62,29 @@
       </div>
       <div class="profile">
         <div class="profile__frame">
-          <img class="profile__img" src="assets/img/profile.svg" alt="Profile photo">
+          <img class="profile__img" src="assets/img/profile.svg" alt="Your Name - Web Developer">
+        </div>
+      </div>
+    </section>
+
+    <section class="panel">
+      <h2>Who I Am</h2>
+      <div class="who-i-am" style="display: grid; grid-template-columns: auto 1fr; gap: 24px; align-items: start;">
+        <div style="min-width: 120px;">
+          <div class="profile__frame" style="width: 120px; height: 120px; padding: 8px;">
+            <img class="profile__img" src="assets/img/profile.svg" alt="Your Name" style="border-radius: 16px;">
+          </div>
+        </div>
+        <div>
+          <p style="color: var(--muted); margin-bottom: 16px; font-size: 1.05rem; line-height: 1.8;">
+            I'm a dedicated web developer with a passion for creating meaningful digital experiences. My journey in web development started with curiosity and has evolved into a commitment to building clean, accessible, and user-friendly websites.
+          </p>
+          <p style="color: var(--muted); margin-bottom: 16px; line-height: 1.8;">
+            I believe in the power of continuous learning and staying up-to-date with the latest web technologies. Whether it's crafting responsive layouts, implementing interactive features, or optimizing performance, I approach each project with attention to detail and a focus on user experience.
+          </p>
+          <p style="color: var(--muted); line-height: 1.8;">
+            When I'm not coding, I enjoy exploring new frameworks, contributing to open-source projects, and sharing knowledge with the developer community. My goal is to create web solutions that are not only functional but also beautiful and accessible to everyone.
+          </p>
         </div>
       </div>
     </section>
