Create comprehensive About page with background, qualifications, and activities

--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Learn about my background, qualifications, education, experience, and activities in web development and software engineering">
   <title>About | Portfolio</title>
   <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -40,43 +41,181 @@
 
   <main>
     <section class="panel">
-      <h1>About me</h1>
-      <p>I’m a student building a foundation in web development. I enjoy pairing creativity with problem solving and using tools like Cursor/VS Code plus GitHub to ship small projects.</p>
+      <h1>About Me</h1>
+      <p style="font-size: 1.1rem; line-height: 1.8; color: var(--muted);">I'm a passionate web developer and student building a foundation in software development. I enjoy pairing creativity with problem-solving and using modern tools like VS Code, Git, and GitHub to create meaningful projects. My journey in technology is driven by curiosity, continuous learning, and a desire to build solutions that make a difference.</p>
     </section>
 
     <section class="panel">
-      <h2>Background</h2>
+      <h2>Background & Education</h2>
       <div class="grid grid-2">
         <div class="card">
           <h3>Education</h3>
           <ul class="list">
-            <li>[Your school], focus on [your major/grade]</li>
-            <li>Recent courses: Intro to Programming, Web Basics</li>
+            <li><strong>Current Studies:</strong> [Your University/School]</li>
+            <li><strong>Major/Program:</strong> [Your Major/Field of Study]</li>
+            <li><strong>Year:</strong> [Your Year/Grade Level]</li>
+            <li><strong>GPA:</strong> [If applicable]</li>
+          </ul>
+          <div style="margin-top: 16px;">
+            <h4 style="margin-bottom: 8px; color: var(--text);">Relevant Coursework:</h4>
+            <ul class="list">
+              <li>Introduction to Programming</li>
+              <li>Web Development Fundamentals</li>
+              <li>Data Structures & Algorithms</li>
+              <li>Database Systems</li>
+              <li>Software Engineering</li>
+            </ul>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Academic Achievements</h3>
+          <ul class="list">
+            <li>Dean's List / Honor Roll [if applicable]</li>
+            <li>Scholarships or Awards [if applicable]</li>
+            <li>Academic Projects Recognition</li>
+            <li>Research or Thesis Work [if applicable]</li>
+          </ul>
+          <div style="margin-top: 16px;">
+            <h4 style="margin-bottom: 8px; color: var(--text);">Key Skills Developed:</h4>
+            <ul class="list">
+              <li>Problem-solving and analytical thinking</li>
+              <li>Collaborative project development</li>
+              <li>Technical documentation</li>
+              <li>Research and learning methodologies</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel">
+      <h2>Qualifications & Certifications</h2>
+      <div class="grid grid-2">
+        <div class="card">
+          <h3>Technical Certifications</h3>
+          <ul class="list">
+            <li><strong>Web Development:</strong> [Certification name, e.g., FreeCodeCamp, Codecademy]</li>
+            <li><strong>Programming Languages:</strong> [JavaScript, Python, etc.]</li>
+            <li><strong>Tools & Technologies:</strong> Git, GitHub, VS Code</li>
+            <li><strong>Online Courses:</strong> [Platform names and courses completed]</li>
           </ul>
         </div>
         <div class="card">
-          <h3>Interests</h3>
+          <h3>Professional Development</h3>
           <ul class="list">
-            <li>Front-end development and UI design</li>
-            <li>Teaching / sharing what I learn</li>
-            <li>Building small tools with JavaScript</li>
+            <li>Completed coding bootcamps or workshops</li>
+            <li>Attended tech conferences or meetups</li>
+            <li>Participated in hackathons or coding competitions</li>
+            <li>Open source contributions</li>
           </ul>
         </div>
       </div>
     </section>
 
     <section class="panel">
-      <h2>Experience & activities</h2>
+      <h2>Experience & Activities</h2>
       <div class="grid grid-2">
         <div class="card">
-          <h3>Course projects</h3>
-          <p>Projects completed for coursework, including Project 1 and Hour of Code, focusing on clean HTML, CSS, and accessible UI.</p>
+          <h3>Projects & Portfolio</h3>
+          <p>I've worked on various projects that showcase my skills in web development:</p>
+          <ul class="list">
+            <li><strong>Personal Portfolio Website:</strong> Built with HTML, CSS, and JavaScript</li>
+            <li><strong>Web Applications:</strong> Interactive projects demonstrating front-end skills</li>
+            <li><strong>Course Projects:</strong> Academic assignments focusing on clean code and best practices</li>
+            <li><strong>Open Source:</strong> Contributions to community projects</li>
+          </ul>
         </div>
         <div class="card">
-          <h3>Clubs & volunteering</h3>
-          <p>Share any clubs, mentoring, or volunteer work related to tech or teaching.</p>
+          <h3>Extracurricular Activities</h3>
+          <ul class="list">
+            <li><strong>Tech Clubs:</strong> [Computer Science Club, Web Dev Society, etc.]</li>
+            <li><strong>Volunteering:</strong> [Teaching coding, mentoring, community service]</li>
+            <li><strong>Competitions:</strong> [Hackathons, coding challenges, programming contests]</li>
+            <li><strong>Leadership Roles:</strong> [Club officer, event organizer, team lead]</li>
+          </ul>
         </div>
       </div>
+    </section>
+
+    <section class="panel">
+      <h2>Skills & Technologies</h2>
+      <div class="grid grid-2">
+        <div class="card">
+          <h3>Technical Skills</h3>
+          <div style="margin-top: 12px;">
+            <h4 style="margin-bottom: 8px; color: var(--text);">Programming Languages:</h4>
+            <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-bottom: 16px;">
+              <span class="pill">HTML5</span>
+              <span class="pill">CSS3</span>
+              <span class="pill">JavaScript</span>
+              <span class="pill">Python</span>
+              <span class="pill">Java</span>
+            </div>
+            <h4 style="margin-bottom: 8px; color: var(--text);">Frameworks & Libraries:</h4>
+            <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-bottom: 16px;">
+              <span class="pill">React</span>
+              <span class="pill">Node.js</span>
+              <span class="pill">Bootstrap</span>
+            </div>
+            <h4 style="margin-bottom: 8px; color: var(--text);">Tools & Platforms:</h4>
+            <div style="display: flex; flex-wrap: wrap; gap: 8px;">
+              <span class="pill">Git & GitHub</span>
+              <span class="pill">VS Code</span>
+              <span class="pill">Figma</span>
+              <span class="pill">Command Line</span>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <h3>Soft Skills</h3>
+          <ul class="list">
+            <li><strong>Communication:</strong> Clear technical documentation and presentation skills</li>
+            <li><strong>Collaboration:</strong> Experience working in teams and pair programming</li>
+            <li><strong>Problem Solving:</strong> Analytical thinking and debugging complex issues</li>
+            <li><strong>Time Management:</strong> Balancing academic work with personal projects</li>
+            <li><strong>Adaptability:</strong> Quick learner of new technologies and frameworks</li>
+            <li><strong>Attention to Detail:</strong> Focus on code quality and user experience</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel">
+      <h2>Interests & Hobbies</h2>
+      <div class="grid grid-2">
+        <div class="card">
+          <h3>Technical Interests</h3>
+          <ul class="list">
+            <li>Front-end development and UI/UX design</li>
+            <li>Learning new programming languages and frameworks</li>
+            <li>Building personal projects and experimenting with new technologies</li>
+            <li>Contributing to open-source projects</li>
+            <li>Following tech blogs and staying updated with industry trends</li>
+          </ul>
+        </div>
+        <div class="card">
+          <h3>Personal Interests</h3>
+          <ul class="list">
+            <li>Reading tech articles and programming books</li>
+            <li>Participating in coding challenges and competitions</li>
+            <li>Teaching and sharing knowledge with others</li>
+            <li>Attending tech meetups and networking events</li>
+            <li>[Add your personal hobbies and interests]</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section class="panel">
+      <h2>Goals & Aspirations</h2>
+      <p style="color: var(--muted); line-height: 1.8; margin-bottom: 16px;">I'm continuously working towards improving my skills and expanding my knowledge in web development and software engineering. My goals include:</p>
+      <ul class="list" style="color: var(--muted);">
+        <li>Building a strong portfolio of diverse projects</li>
+        <li>Contributing meaningfully to open-source communities</li>
+        <li>Pursuing internships or opportunities in software development</li>
+        <li>Mastering full-stack development</li>
+        <li>Creating solutions that solve real-world problems</li>
+      </ul>
     </section>
   </main>
 
