--- a/about.html
+++ b/about.html
@@ -208,14 +208,7 @@
 
     <section class="panel">
       <h2>Goals & Aspirations</h2>
-      <p style="color: var(--muted); line-height: 1.8; margin-bottom: 16px;">I'm continuously working towards improving my skills and expanding my knowledge in web development and software engineering. My goals include:</p>
-      <ul class="list" style="color: var(--muted);">
-        <li>Building a strong portfolio of diverse projects</li>
-        <li>Contributing meaningfully to open-source communities</li>
-        <li>Pursuing internships or opportunities in software development</li>
-        <li>Mastering full-stack development</li>
-        <li>Creating solutions that solve real-world problems</li>
-      </ul>
+      <p style="color: var(--muted); line-height: 1.8; font-size: 1.05rem;">My goal is to continue developing my technical skills and gain hands-on experience in real-world projects. I am particularly interested in pursuing opportunities related to AI and software engineering, where I can contribute to meaningful and innovative solutions.</p>
     </section>
   </main>
 
