Update Interests & Hobbies section with personal interests in AI, space, chess, and more

--- a/about.html
+++ b/about.html
@@ -185,23 +185,11 @@
       <div class="grid grid-2">
         <div class="card">
           <h3>Technical Interests</h3>
-          <ul class="list">
-            <li>Front-end development and UI/UX design</li>
-            <li>Learning new programming languages and frameworks</li>
-            <li>Building personal projects and experimenting with new technologies</li>
-            <li>Contributing to open-source projects</li>
-            <li>Following tech blogs and staying updated with industry trends</li>
-          </ul>
+          <p style="color: var(--muted); line-height: 1.8; margin-bottom: 12px;">I am particularly interested in artificial intelligence and machine learning, especially how intelligent systems are designed and applied in real-world scenarios. I enjoy exploring topics related to space and the universe, including space exploration and the scientific questions surrounding the structure and expansion of the universe.</p>
         </div>
         <div class="card">
-          <h3>Personal Interests</h3>
-          <ul class="list">
-            <li>Reading tech articles and programming books</li>
-            <li>Participating in coding challenges and competitions</li>
-            <li>Teaching and sharing knowledge with others</li>
-            <li>Attending tech meetups and networking events</li>
-            <li>[Add your personal hobbies and interests]</li>
-          </ul>
+          <h3>Personal Hobbies</h3>
+          <p style="color: var(--muted); line-height: 1.8; margin-bottom: 12px;">In my free time, I enjoy playing chess, which helps me improve my logical thinking and problem-solving skills. I also like traveling and spending time in nature. Additionally, I have an interest in cars and follow developments in automotive technology. I also enjoy watching and following football as a way to relax and stay engaged outside of my academic work.</p>
         </div>
       </div>
     </section>
