Update Skills section: Python only for technical skills, detailed soft skills descriptions

--- a/about.html
+++ b/about.html
@@ -144,37 +144,21 @@
           <h3>Technical Skills</h3>
           <div style="margin-top: 12px;">
             <h4 style="margin-bottom: 8px; color: var(--text);">Programming Languages:</h4>
-            <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-bottom: 16px;">
-              <span class="pill">HTML5</span>
-              <span class="pill">CSS3</span>
-              <span class="pill">JavaScript</span>
-              <span class="pill">Python</span>
-              <span class="pill">Java</span>
-            </div>
-            <h4 style="margin-bottom: 8px; color: var(--text);">Frameworks & Libraries:</h4>
-            <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-bottom: 16px;">
-              <span class="pill">React</span>
-              <span class="pill">Node.js</span>
-              <span class="pill">Bootstrap</span>
-            </div>
-            <h4 style="margin-bottom: 8px; color: var(--text);">Tools & Platforms:</h4>
             <div style="display: flex; flex-wrap: wrap; gap: 8px;">
-              <span class="pill">Git & GitHub</span>
-              <span class="pill">VS Code</span>
-              <span class="pill">Figma</span>
-              <span class="pill">Command Line</span>
+              <span class="pill">Python</span>
             </div>
           </div>
         </div>
         <div class="card">
           <h3>Soft Skills</h3>
           <ul class="list">
-            <li><strong>Communication:</strong> Clear technical documentation and presentation skills</li>
-            <li><strong>Collaboration:</strong> Experience working in teams and pair programming</li>
-            <li><strong>Problem Solving:</strong> Analytical thinking and debugging complex issues</li>
-            <li><strong>Time Management:</strong> Balancing academic work with personal projects</li>
-            <li><strong>Adaptability:</strong> Quick learner of new technologies and frameworks</li>
-            <li><strong>Attention to Detail:</strong> Focus on code quality and user experience</li>
+            <li><strong>Communication:</strong> Clear explanation of ideas and basic technical concepts in presentations and written work</li>
+            <li><strong>Collaboration:</strong> Experience working in small teams on academic assignments and project-based tasks</li>
+            <li><strong>Problem Solving:</strong> Strong analytical thinking and ability to approach programming and logical problems methodically</li>
+            <li><strong>Time Management:</strong> Ability to balance coursework, deadlines, and personal learning projects</li>
+            <li><strong>Adaptability:</strong> Willingness to learn new tools, technologies, and concepts as required</li>
+            <li><strong>Attention to Detail:</strong> Careful approach to writing code and maintaining clean, readable project structure</li>
+            <li><strong>Leadership:</strong> Initiative in proposing ideas, organizing tasks, and contributing actively in group work</li>
           </ul>
         </div>
       </div>
