Add name Elshan Samadzada throughout website and update brand badge to ES

--- a/about.html
+++ b/about.html
@@ -11,8 +11,8 @@
   <header>
     <nav class="nav">
       <a class="brand" href="index.html">
-        <span class="brand__badge">YN</span>
-        <span>Your Name</span>
+        <span class="brand__badge">ES</span>
+        <span>Elshan Samadzada</span>
       </a>
       <div class="nav__links">
         <a href="index.html">Home</a>
@@ -116,22 +116,21 @@
       <h2>Experience & Activities</h2>
       <div class="grid grid-2">
         <div class="card">
-          <h3>Projects & Portfolio</h3>
-          <p>I've worked on various projects that showcase my skills in web development:</p>
+          <h3>Projects & Academic Work</h3>
           <ul class="list">
-            <li><strong>Personal Portfolio Website:</strong> Built with HTML, CSS, and JavaScript</li>
-            <li><strong>Web Applications:</strong> Interactive projects demonstrating front-end skills</li>
-            <li><strong>Course Projects:</strong> Academic assignments focusing on clean code and best practices</li>
-            <li><strong>Open Source:</strong> Contributions to community projects</li>
+            <li><strong>Personal Portfolio Website:</strong> Designed and developed a responsive personal website using HTML and CSS to present academic background, skills, and projects.</li>
+            <li><strong>Course Assignments:</strong> Completed multiple programming and web development assignments as part of university coursework, focusing on clean structure, readability, and basic best practices.</li>
+            <li><strong>Project-Based Learning:</strong> Worked on small academic and personal projects to apply programming concepts and strengthen problem-solving skills.</li>
+            <li><strong>Introductory Use of Git & GitHub:</strong> Managed project versions, commits, and repository structure for coursework and personal projects.</li>
           </ul>
         </div>
         <div class="card">
-          <h3>Extracurricular Activities</h3>
+          <h3>Activities & Engagement</h3>
           <ul class="list">
-            <li><strong>Tech Clubs:</strong> [Computer Science Club, Web Dev Society, etc.]</li>
-            <li><strong>Volunteering:</strong> [Teaching coding, mentoring, community service]</li>
-            <li><strong>Competitions:</strong> [Hackathons, coding challenges, programming contests]</li>
-            <li><strong>Leadership Roles:</strong> [Club officer, event organizer, team lead]</li>
+            <li><strong>Academic Presentations:</strong> Participated in class presentations and group discussions, explaining project ideas and technical concepts.</li>
+            <li><strong>Team-Based Work:</strong> Collaborated with peers on coursework and project tasks, contributing ideas and completing assigned responsibilities.</li>
+            <li><strong>Self-Directed Learning:</strong> Actively learning topics related to artificial intelligence, machine learning, and software development beyond formal coursework.</li>
+            <li><strong>Leadership & Initiative:</strong> Proposed project ideas and took initiative in organizing tasks during group-based academic work.</li>
           </ul>
         </div>
       </div>
@@ -186,7 +185,7 @@
 
   <footer>
     <div class="footer">
-      <span>© 2025 Your Name</span>
+      <span>© 2025 Elshan Samadzada</span>
       <a class="repo-link" href="https://github.com/elshansamadzada7/elshansamadzada7.github.io">Website repository ↗</a>
       <div class="nav__actions">
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
