--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <header>
     <nav class="nav">
       <a class="brand" href="index.html">
-        <span class="brand__badge">YN</span>
-        <span>Your Name</span>
+        <span class="brand__badge">ES</span>
+        <span>Elshan Samadzada</span>
       </a>
       <div class="nav__links">
         <a class="active" href="index.html">Home</a>
@@ -43,7 +43,7 @@
     <section class="hero">
       <div>
         <p class="eyebrow">Hello, I'm</p>
-        <h1>Your Name</h1>
+        <h1>Elshan Samadzada</h1>
         <p class="subtitle">Student • Builder • Curious mind learning web development</p>
         <div style="color: var(--muted); margin-top: 16px; margin-bottom: 24px; line-height: 1.8;">
           <p style="margin-bottom: 12px;">I'm a passionate web developer and designer who loves creating beautiful, functional websites and web applications. With a focus on clean code, great design, and continuous learning, I enjoy turning ideas into reality through code.</p>
@@ -62,7 +62,7 @@
       </div>
       <div class="profile">
         <div class="profile__frame">
-          <img class="profile__img" src="assets/img/profile.svg" alt="Your Name - Web Developer">
+          <img class="profile__img" src="assets/img/profile.svg" alt="Elshan Samadzada - Web Developer">
         </div>
       </div>
     </section>
@@ -72,7 +72,7 @@
       <div class="who-i-am" style="display: grid; grid-template-columns: auto 1fr; gap: 24px; align-items: start;">
         <div style="min-width: 120px;">
           <div class="profile__frame" style="width: 120px; height: 120px; padding: 8px;">
-            <img class="profile__img" src="assets/img/profile.svg" alt="Your Name" style="border-radius: 16px;">
+            <img class="profile__img" src="assets/img/profile.svg" alt="Elshan Samadzada" style="border-radius: 16px;">
           </div>
         </div>
         <div>
@@ -187,7 +187,7 @@
 
   <footer>
     <div class="footer">
-      <span>© 2025 Your Name</span>
+      <span>© 2025 Elshan Samadzada</span>
       <a class="repo-link" href="https://github.com/elshansamadzada7/elshansamadzada7.github.io">Website repository ↗</a>
       <div class="nav__actions">
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
