--- a/projects.html
+++ b/projects.html
@@ -10,8 +10,8 @@
   <header>
     <nav class="nav">
       <a class="brand" href="index.html">
-        <span class="brand__badge">YN</span>
-        <span>Your Name</span>
+        <span class="brand__badge">ES</span>
+        <span>Elshan Samadzada</span>
       </a>
       <div class="nav__links">
         <a href="index.html">Home</a>
@@ -83,7 +83,7 @@
 
   <footer>
     <div class="footer">
-      <span>© 2025 Your Name</span>
+      <span>© 2025 Elshan Samadzada</span>
       <a class="repo-link" href="https://github.com/elshansamadzada7/elshansamadzada7.github.io">Website repository ↗</a>
       <div class="nav__actions">
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
