--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       </div>
       <div class="profile">
         <div class="profile__frame">
-          <img class="profile__img" src="assets/img/profile.svg" alt="Elshan Samadzada - Web Developer">
+          <img class="profile__img" src="assets/img/profile.jpg" alt="Elshan Samadzada - Web Developer">
         </div>
       </div>
     </section>
@@ -72,7 +72,7 @@
       <div class="who-i-am" style="display: grid; grid-template-columns: auto 1fr; gap: 24px; align-items: start;">
         <div style="min-width: 120px;">
           <div class="profile__frame" style="width: 120px; height: 120px; padding: 8px;">
-            <img class="profile__img" src="assets/img/profile.svg" alt="Elshan Samadzada" style="border-radius: 16px;">
+            <img class="profile__img" src="assets/img/profile.jpg" alt="Elshan Samadzada" style="border-radius: 16px;">
           </div>
         </div>
         <div>
