Update Qualifications & Certifications section with technical certifications and professional development activities

--- a/about.html
+++ b/about.html
@@ -92,21 +92,21 @@
       <h2>Qualifications & Certifications</h2>
       <div class="grid grid-2">
         <div class="card">
-          <h3>Technical Certifications</h3>
+          <h3>Technical Certifications & Learning</h3>
           <ul class="list">
-            <li><strong>Web Development:</strong> [Certification name, e.g., FreeCodeCamp, Codecademy]</li>
-            <li><strong>Programming Languages:</strong> [JavaScript, Python, etc.]</li>
-            <li><strong>Tools & Technologies:</strong> Git, GitHub, VS Code</li>
-            <li><strong>Online Courses:</strong> [Platform names and courses completed]</li>
+            <li><strong>Web Development:</strong> Built your personal portfolio website using HTML and CSS</li>
+            <li><strong>Programming Languages:</strong> Python (basic to intermediate), introductory JavaScript</li>
+            <li><strong>Tools & Technologies:</strong> Git, GitHub, VS Code, Live Server</li>
+            <li><strong>Online Courses & Learning:</strong> Completed online tutorials and exercises on Codecademy and similar platforms to practice Python and web development fundamentals</li>
           </ul>
         </div>
         <div class="card">
-          <h3>Professional Development</h3>
+          <h3>Professional Development & Activities</h3>
           <ul class="list">
-            <li>Completed coding bootcamps or workshops</li>
-            <li>Attended tech conferences or meetups</li>
-            <li>Participated in hackathons or coding competitions</li>
-            <li>Open source contributions</li>
+            <li>Participated in university projects and coursework assignments focusing on clean coding and project structure</li>
+            <li>Engaged in self-directed learning in artificial intelligence, machine learning, and web development</li>
+            <li>Collaborated with peers on academic projects, developing teamwork and problem-solving skills</li>
+            <li>Explored version control through Git/GitHub for managing projects and code</li>
           </ul>
         </div>
       </div>
