Update Background & Education section with ADA University details and academic achievements

--- a/about.html
+++ b/about.html
@@ -51,37 +51,26 @@
         <div class="card">
           <h3>Education</h3>
           <ul class="list">
-            <li><strong>Current Studies:</strong> [Your University/School]</li>
-            <li><strong>Major/Program:</strong> [Your Major/Field of Study]</li>
-            <li><strong>Year:</strong> [Your Year/Grade Level]</li>
-            <li><strong>GPA:</strong> [If applicable]</li>
+            <li><strong>Current Studies:</strong> ADA University, Baku, Azerbaijan</li>
+            <li><strong>Major/Program:</strong> Computer Engineering</li>
+            <li><strong>Year:</strong> First-year (Foundation Year)</li>
           </ul>
-          <div style="margin-top: 16px;">
-            <h4 style="margin-bottom: 8px; color: var(--text);">Relevant Coursework:</h4>
-            <ul class="list">
-              <li>Introduction to Programming</li>
-              <li>Web Development Fundamentals</li>
-              <li>Data Structures & Algorithms</li>
-              <li>Database Systems</li>
-              <li>Software Engineering</li>
-            </ul>
-          </div>
         </div>
         <div class="card">
           <h3>Academic Achievements</h3>
           <ul class="list">
-            <li>Dean's List / Honor Roll [if applicable]</li>
-            <li>Scholarships or Awards [if applicable]</li>
-            <li>Academic Projects Recognition</li>
-            <li>Research or Thesis Work [if applicable]</li>
+            <li>Maintaining strong grades in foundation year coursework</li>
+            <li>Completed various academic projects demonstrating programming and web development skills</li>
+            <li>Active participation in university assignments and group projects</li>
           </ul>
           <div style="margin-top: 16px;">
             <h4 style="margin-bottom: 8px; color: var(--text);">Key Skills Developed:</h4>
             <ul class="list">
-              <li>Problem-solving and analytical thinking</li>
-              <li>Collaborative project development</li>
-              <li>Technical documentation</li>
-              <li>Research and learning methodologies</li>
+              <li>Problem-solving and analytical thinking through coursework and assignments</li>
+              <li>Collaborative project development in small academic teams</li>
+              <li>Basic technical documentation and code organization</li>
+              <li>Self-directed learning in programming, AI, and web development</li>
+              <li>Time management and balancing academic work with personal projects</li>
             </ul>
           </div>
         </div>
