Add HTML to programming languages in Skills section

--- a/about.html
+++ b/about.html
@@ -134,6 +134,7 @@
             <h4 style="margin-bottom: 8px; color: var(--text);">Programming Languages:</h4>
             <div style="display: flex; flex-wrap: wrap; gap: 8px;">
               <span class="pill">Python</span>
+              <span class="pill">HTML</span>
             </div>
           </div>
         </div>
