--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
   <main>
     <section class="panel">
       <h1>About Me</h1>
-      <p style="font-size: 1.1rem; line-height: 1.8; color: var(--muted);">I'm a passionate web developer and student building a foundation in software development. I enjoy pairing creativity with problem-solving and using modern tools like VS Code, Git, and GitHub to create meaningful projects. My journey in technology is driven by curiosity, continuous learning, and a desire to build solutions that make a difference.</p>
+      <p style="font-size: 1.1rem; line-height: 1.8; color: var(--muted);">I am a first-year Computer Engineering student at ADA University, passionate about programming, artificial intelligence, and web development. I enjoy combining logical problem-solving with creativity to build small projects and explore new technologies. I work with tools like VS Code, Git, and GitHub to manage and develop my projects. Currently living in Baku, Azerbaijan, I am driven by curiosity, continuous learning, and a desire to understand and create innovative solutions in technology. Outside of academics, I enjoy exploring nature, traveling, playing chess, and following developments in AI.</p>
     </section>
 
     <section class="panel">
