Update contact email, Codecademy profile links, and location to Baku, Azerbaijan

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/elshann" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
@@ -83,7 +83,7 @@
         <div class="card">
           <h3>Technical Certifications & Learning</h3>
           <ul class="list">
-            <li><strong>Web Development:</strong> Built your personal portfolio website using HTML and CSS</li>
+            <li><strong>Web Development:</strong> Built my personal portfolio website using HTML and CSS</li>
             <li><strong>Programming Languages:</strong> Python (basic to intermediate), introductory JavaScript</li>
             <li><strong>Tools & Technologies:</strong> Git, GitHub, VS Code, Live Server</li>
             <li><strong>Online Courses & Learning:</strong> Completed online tutorials and exercises on Codecademy and similar platforms to practice Python and web development fundamentals</li>
@@ -181,7 +181,7 @@
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/elshann" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
