--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/elshann" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
@@ -127,7 +127,7 @@
     <section class="panel">
       <div class="card__header">
         <h2>About Me</h2>
-        <span class="tag">Based in • Your city</span>
+        <span class="tag">Based in • Baku, Azerbaijan</span>
       </div>
       <div class="grid grid-2">
         <div class="card">
@@ -165,7 +165,7 @@
 
     <section class="panel" id="contact">
       <h2>Get in Touch</h2>
-      <p>Have a project in mind or want to collaborate? I'd love to hear from you. Use the form below or email me directly at <a href="mailto:you@example.com" style="color: var(--accent);">you@example.com</a>.</p>
+      <p>Have a project in mind or want to collaborate? I'd love to hear from you. Use the form below or email me directly at <a href="mailto:elshansamedzade7@gmail.com" style="color: var(--accent);">elshansamedzade7@gmail.com</a>.</p>
       <form id="contact-form">
         <label>
           Name
