--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/elshann" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
@@ -89,7 +89,7 @@
         <a class="icon-btn" href="https://github.com/elshansamadzada7" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#github"></use></svg>
         </a>
-        <a class="icon-btn" href="https://www.codecademy.com/profiles/your-profile" aria-label="Codecademy">
+        <a class="icon-btn" href="https://www.codecademy.com/profiles/elshann" aria-label="Codecademy" target="_blank" rel="noopener noreferrer">
           <svg width="18" height="18"><use href="assets/img/icons.svg#codecademy"></use></svg>
         </a>
       </div>
